docs/v0.2.0a115/_sources/reference/_autosummary/hpcflow.sdk.core.errors.rst.txt
hpcflow.sdk.core.errors
=======================

.. toctree::
   :includehidden:

.. automodule:: hpcflow.sdk.core.errors

   
   
   

   
   
   

   
   
   

   
   
   .. rubric:: Exceptions

   .. autosummary::
      :toctree:
   
      ContainerKeyError
      DuplicateExecutableError
      EnvironmentSpecValidationError
      ExtraInputs
      FileSpecValidationError
      FromSpecMissingObjectError
      IncompatibleParallelModeError
      IncompatibleSGEPEError
      IncompatibleSLURMArgumentsError
      IncompatibleSLURMPartitionError
      InputSourceValidationError
      InputValueDuplicateSequenceAddress
      InvalidIdentifier
      InvalidInputSourceTaskReference
      JobscriptSubmissionFailure
      LoopAlreadyExistsError
      MalformedParameterPathError
      MalformedWorkflowError
      MayNeedObjectError
      MissingActionEnvironment
      MissingCompatibleActionEnvironment
      MissingEnvironmentError
      MissingEnvironmentExecutableError
      MissingInputs
      MissingParameterData
      MissingStoreEARError
      MissingStoreElementError
      MissingStoreElementIterationError
      MissingStoreTaskError
      NoAvailableElementSetsError
      NoCLIFormatMethodError
      NoCompatibleSGEPEError
      NotSubmitMachineError
      OutputFileParserNoOutputError
      ParameterSpecValidationError
      ResourceValidationError
      RunNotAbortableError
      SchedulerVersionsFailure
      SubmissionEnvironmentError
      SubmissionFailure
      TaskSchemaMissingParameterError
      TaskSchemaSpecValidationError
      TaskTemplateInvalidNesting
      TaskTemplateMultipleInputValues
      TaskTemplateMultipleSchemaObjectives
      TaskTemplateUnexpectedInput
      TaskTemplateUnexpectedSequenceInput
      ToJSONLikeChildReferenceError
      UnknownResourceSpecItemError
      UnknownSGEPEError
      UnknownSLURMPartitionError
      UnrequiredInputSources
      UnsetParameterDataError
      UnsupportedOSError
      UnsupportedSchedulerError
      UnsupportedShellError
      ValuesAlreadyPersistentError
      WorkflowBatchUpdateFailedError
      WorkflowLimitsError
      WorkflowNotFoundError
      WorkflowParameterMissingError
      WorkflowSpecValidationError
      WorkflowSubmissionFailure
   
   



